Issue #25717: Add comment explaining why errors are ignored